--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "config": "^3.2.2",
     "express": "^4.16.4"
   },
   "scripts": {
